# fastapi-construct

./: README.md  example_app.py  example_inject.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/fastapi_construct/: __init__.py  container.py  decorators.py  enums.py  exceptions.py  reflection.py  routes.py  types.py
tests/: test_auth_pattern.py  test_automatic_inference.py  test_backward_compatibility.py  test_circular_dependency.py  test_container.py  test_container_new.py  test_container_state.py  test_enums.py  test_function_injection.py  test_new_features.py  test_parameter_handling.py  test_reflection.py  test_response_model_inference.py  test_routes_and_decorators.py  test_self_binding.py
