[project]
name = "fastapi-construct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zozi", email = "zfernandez@advantahealth.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
