[project]
name = "fastapi-construct"
version = "1.0.6"
description = "A lightweight dependency injection library for FastAPI with NestJS/ASP.NET Core style architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "zozi", email = "zozi.fer96@gmail.com" }
]
maintainers = [
    { name = "zozi", email = "zozi.fer96@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "fastapi",
    "dependency-injection",
    "di",
    "ioc",
    "controller",
    "autowiring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.122.0",
]

[project.urls]
Homepage = "https://github.com/Zozi96/fastapi-construct"
Repository = "https://github.com/Zozi96/fastapi-construct"
Documentation = "https://github.com/Zozi96/fastapi-construct#readme"
"Bug Tracker" = "https://github.com/Zozi96/fastapi-construct/issues"
Changelog = "https://github.com/Zozi96/fastapi-construct/releases"
PyPI = "https://pypi.org/project/fastapi-construct/"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # unused arguments in tests
    "PLR2004", # magic values in tests are ok
]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_construct"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
